syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package board;

message Notice {
    int32 id = 1;
    string type = 2;
    string title = 3;
    string content = 4;
    string created_at = 5;
    string updated_at = 6;
    repeated string attachments = 7;
}

message GetNoticeListRequest {
    string search = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message GetNoticeListResponse {
    repeated Notice notice = 1;
    int32 total_count = 2;
}

message GetNoticeRequest {
    string id = 1;
}

message PartialNotice {
    string type = 1;
    string title = 2;
    string content = 3;
    repeated string attachments = 4;
}

message UpdateNoticeRequest {
    string id = 1;
    PartialNotice notice = 2;
}

message DeleteNoticeRequest {
    string id = 1;
}